# buildroot_lichee_pi_zero

board/licheepi/: boot.cmd  genimage.cfg  licheepi-kernel-5.12.0.patch  licheepi-kernel-5.8.patch  licheepi_kernel_config  u-boot_python2.patch
board/licheepi/filesystem/etc/: fstab  wpa_supplicant.conf  wpa_supplicant_ap.conf
board/licheepi/filesystem/etc/default/: sntp
board/licheepi/filesystem/etc/init.d/: S10modprobe  S10ubi  S96qmqmonitor
board/licheepi/filesystem/etc/network/: interfaces
board/licheepi/filesystem/etc/profile.d/: qt6platform.sh
board/licheepi/filesystem/usr/lib/: fonts
configs/: licheepi_zero_defconfig
package/: Config.in
package/esp8089/: Config.in  esp8089.hash  esp8089.mk
package/helloworld/: Config.in  helloworld.mk
package/helloworld/src/: Makefile  helloworld.c
package/mqttmonitor/: Config.in  mqttmonitor.mk
package/mqttmonitor/src/: Makefile  mqttmonitor.c
package/qmqmonitor/: Config.in  qmqmonitor.mk
package/qt6helloworld/: Config.in  qt6helloworld.mk
package/qt6helloworld/src/: CMakeLists.txt  hello.cpp
